# monotone_detector

./: .gitignore  CMakeLists.txt  FrequencyPlotter.hpp  PlotTimer.hpp  README.md  main.cpp  utility.h
operations/: buffer_and_save.hpp  noise_detector.hpp  operation.cpp  operation.h  print_similarity.hpp  raw_operation.cpp  raw_operation.h
pc/: consumer.cpp  consumer.h  task.h
